--- a/UniversityRegistrar/Views/Students/Create.cshtml
+++ b/UniversityRegistrar/Views/Students/Create.cshtml
@@ -8,7 +8,7 @@
 @using (Html.BeginForm())
 {
   @Html.LabelFor(model => model.StudentName)
-  @Html.TextBoxFor(mode => model.StudentName)
+  @Html.TextBoxFor(model => model.StudentName)
   <input type="submit" value="Add new student" />
 
 }
