add edit view and action + debug datetime
Co-authored-by: Brianca Knight <briancaknight@gmail.com>

--- a/UniversityRegistrar/Views/Students/Create.cshtml
+++ b/UniversityRegistrar/Views/Students/Create.cshtml
@@ -7,6 +7,8 @@
 <h4>Add a new student</h4>
 @using (Html.BeginForm())
 {
+  @Html.HiddenFor(model =>model.Enrollment)
+
   @Html.LabelFor(model => model.StudentName)
   @Html.TextBoxFor(model => model.StudentName)
   <input type="submit" value="Add new student" />
