--- a/UniversityRegistrar/Views/Students/Index.cshtml
+++ b/UniversityRegistrar/Views/Students/Index.cshtml
@@ -14,7 +14,7 @@
 
 @foreach (Student student in Model)
 {
-  <li>@student.StudentName</li>
+  <li>@Html.ActionLink($"{student.StudentName}", "Details", new { id = student.StudentId})</li>
 }
 
 <p>@Html.ActionLink("Add new student", "Create")</p>
