--- a/UniversityRegistrar/Views/Students/Details.cshtml
+++ b/UniversityRegistrar/Views/Students/Details.cshtml
@@ -8,4 +8,5 @@
 
 <hr />
 <h3>@Html.DisplayNameFor(model => model.StudentName): @Html.DisplayFor(model => model.StudentName)</h3>
+<h4>@Html.DisplayNameFor(model => model.Enrollment): @Html.DisplayFor(model => model.Enrollment) </h4>
 <p>@Html.ActionLink("Back to list", "Index")</p>
