add delete view and action
Co-authored-by: Brianca Knight <briancaknight@gmail.com>

--- a/UniversityRegistrar/Views/Students/Details.cshtml
+++ b/UniversityRegistrar/Views/Students/Details.cshtml
@@ -9,4 +9,7 @@
 <hr />
 <h3>@Html.DisplayNameFor(model => model.StudentName): @Html.DisplayFor(model => model.StudentName)</h3>
 <h4>@Html.DisplayNameFor(model => model.Enrollment): @Html.DisplayFor(model => model.Enrollment) </h4>
+
 <p>@Html.ActionLink("Back to list", "Index")</p>
+<p>@Html.ActionLink("Edit Student", "Edit", new { id = Model.StudentId })</p>
+<p>@Html.ActionLink("Delete Student", "Delete", new { id = Model.StudentId })</p>
