--- a/UniversityRegistrar/Views/Courses/Details.cshtml
+++ b/UniversityRegistrar/Views/Courses/Details.cshtml
@@ -2,14 +2,45 @@
   Layout = "_Layout";
 }
 
-@model UniversityRegistrar.Models.Course
+@model UniversityRegistrar.Models.Course;
+@using UniversityRegistrar.Models;
+@using System.Collections.Generic;
 
 <h2>Course Details</h2>
-
 <hr />
 <h3>@Html.DisplayNameFor(model => model.CourseName): @Html.DisplayFor(model => model.CourseName)</h3>
 <h4>@Html.DisplayNameFor(model => model.CourseNumber): @Html.DisplayFor(model => model.CourseNumber) </h4>
 
+@if(@Model.JoinEntities.Count == 0)
+{
+  <p>This course does not have any students.</p>
+}
+else 
+{
+  <h4>Students in this course:</h4>
+  <ul>
+  @foreach(CourseStudent in Model.JoinEntities)
+  {
+    string students = "";
+    @if(student.JoinEntities.Count == 0)
+    {
+      students = "This course does not have any students";
+    }
+    else
+    {
+      List<string> studentList = new List<string>();
+      @foreach (CourseStudent join in Model.JoinEntities)
+      {
+        studentList.Add(join.Student.StudentName);
+      }
+      students = String.Join(", ", studentList);
+    }
+    <li>@student.StudentName </li>
+  }
+  </ul>
+}
+
 <p>@Html.ActionLink("Back to list", "Index")</p>
 <p>@Html.ActionLink("Edit Course", "Edit", new { id = Model.CourseId })</p>
 <p>@Html.ActionLink("Delete Course", "Delete", new { id = Model.CourseId })</p>
+<p>@Html.ActionLink("Add new student", "Create", "Students")</p>
