--- a/UniversityRegistrar/Views/Students/Details.cshtml
+++ b/UniversityRegistrar/Views/Students/Details.cshtml
@@ -2,6 +2,7 @@
   Layout = "_Layout";
 }
 
+
 @model UniversityRegistrar.Models.Student;
 @using UniversityRegistrar.Models;
 @using System.Collections.Generic;
@@ -12,7 +13,8 @@
 <h3>@Html.DisplayNameFor(model => model.StudentName): @Html.DisplayFor(model => model.StudentName)</h3>
 <h4>@Html.DisplayNameFor(model => model.Enrollment): @Html.DisplayFor(model => model.Enrollment) </h4>
 
-@if (@Model.Courses.Count == 0)
+
+@if (@Model.JoinEntities.Count == 0)
 {
   <p> This Student does not have any courses.</p>
 }
@@ -20,26 +22,13 @@ else
 {
   <h4>Courses the Student has taken:</h4>
   <ul>
-    @foreach(Course course in Model.Courses)
+  @foreach (CourseStudent join in Model.JoinEntities)
     {
-      string courses = "";
-      @if(course.JoinEntities.Count == 0)
-      {
-        courses = "This student does not have any courses.";
-      }
-      else
-      {
-        List<string> courseList = new List<string>();
-          @foreach(CourseStudent join in Model.JoinEntities)
-          {
-            courseList.Add(join.Course.CourseName);
-          }
-          courses = String.Join(", ", courseList);
-      }
-      <li>@course.CourseName</li>
+      <li>@join.Course.CourseName</li>
     }
   </ul>
 }
+
 
 <p>@Html.ActionLink("Back to list", "Index")</p>
 <p>@Html.ActionLink("Edit Student", "Edit", new { id = Model.StudentId })</p>
