add deleteJoin functionality + edit detail view
Co-authored-by: Brianca Knight <briancaknight@gmail.com>

--- a/UniversityRegistrar/Views/Courses/Details.cshtml
+++ b/UniversityRegistrar/Views/Courses/Details.cshtml
@@ -22,8 +22,12 @@ else
   @foreach(CourseStudent join in Model.JoinEntities)
   {
       <li>@join.Student.StudentName </li>
-    }
-    
+      @using (Html.BeginForm("DeleteJoin", "Courses"))
+  {
+    @Html.Hidden("joinId", @join.CourseStudentId)
+    <input type="submit" value="Delete" />
+  }
+  }
   </ul>
   }
 
