--- a/UniversityRegistrar/Views/Home/Index.cshtml
+++ b/UniversityRegistrar/Views/Home/Index.cshtml
@@ -4,4 +4,5 @@
 
 <h1>Univeristy Registrar</h1>
 <br>
-<p>Navigation links to go here.</p>
+<p>@Html.ActionLink("Student List", "Index", "Students")</p>
+<p>@Html.ActionLink("Course List", "Index", "Courses")</p>
