--- a/UniversityRegistrar/Views/Home/Index.cshtml
+++ b/UniversityRegistrar/Views/Home/Index.cshtml
@@ -2,7 +2,36 @@
   Layout = "_Layout";
 }
 
+@using UniversityRegistrar.Models;
+
 <h1>Univeristy Registrar</h1>
-<br>
+<hr />
+
+<h4>Courses</h4>
+@if (Model["courses"].Length == 0)
+{
+  <p>No courses have been added yet!</p>
+}
+<ul>
+  @foreach (Course course in Model["courses"])
+  {
+    <li>@Html.ActionLink(@course.CourseName, "Details", "Courses", new { id = @course.CourseId}) </li>
+  }
+</ul>
+
+<h4>Students</h4>
+@if(Model["students"].Length == 0)
+{
+  <p>No students have been added yet</p>
+}
+<ul>
+  @foreach (Student student in Model["students"])
+  {
+    <li>@Html.ActionLink(@student.StudentName, "Details", "Students", new { id = @student.StudentId })</li>
+  }
+</ul>
+
+<hr />
+
 <p>@Html.ActionLink("Student List", "Index", "Students")</p>
 <p>@Html.ActionLink("Course List", "Index", "Courses")</p>
