WIP add courseDepartment relationship with read
Co-authored-by: Brianca Knight <briancaknight@gmail.com>

--- a/UniversityRegistrar/Views/Home/Index.cshtml
+++ b/UniversityRegistrar/Views/Home/Index.cshtml
@@ -33,5 +33,20 @@
 
 <hr />
 
+<h4>Departments</h4>
+@if(Model["departments"].Length == 0)
+{
+  <p>No departments have been added yet</p>
+}
+<ul>
+  @foreach (Department department in Model["departments"])
+  {
+    <li>@Html.ActionLink(@department.DepartmentName, "Details", "Departments", new { id = @department.DepartmentId })</li>
+  }
+</ul>
+
+<hr />
+
 <p>@Html.ActionLink("Student List", "Index", "Students")</p>
 <p>@Html.ActionLink("Course List", "Index", "Courses")</p>
+<p>@Html.ActionLink("Department List", "Index", "Departments")</p>
