add delete functionality for deparments + view
Co-authored-by: Brianca Knight <briancaknight@gmail.com>
Co-authored-by: Chri Quattrocchi <chrisquattrocchi@gmail.com>

--- a/UniversityRegistrar/Views/Departments/Details.cshtml
+++ b/UniversityRegistrar/Views/Departments/Details.cshtml
@@ -30,3 +30,4 @@ else
 <p>@Html.ActionLink("Edit a Department", "Edit", new { id = Model.DepartmentId })</p>
 <p>@Html.ActionLink("Delete a Department", "Delete", new { id = Model.DepartmentId })</p>
 <p>@Html.ActionLink("Add a New Department", "Create", "Departments")</p>
+<p>@Html.ActionLink("Delete Department", "Delete", new { id = Model.DepartmentId })</p>
