--- a/UniversityRegistrar/Views/Shared/_Layout.cshtml
+++ b/UniversityRegistrar/Views/Shared/_Layout.cshtml
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="~/css/styles.css">
   </head>
   <body>
+    @await Html.PartialAsync("Header")
     @RenderBody()
     @await Html.PartialAsync("Footer")
   </body>
