--- a/UniversityRegistrar/Views/Courses/Index.cshtml
+++ b/UniversityRegistrar/Views/Courses/Index.cshtml
@@ -4,17 +4,22 @@
 
 @using UniversityRegistrar.Models;
 
-<h1>Courses</h1>
+<div class="card">
+  <h1>Courses</h1>
+  <hr />
 
-@if (@Model.Count == 0)
+  <div class="row">
+    @if (@Model.Count == 0)
 
-{
-  <h3>There are no courses yet. </h3>
-}
+    {
+      <h3>There are no courses yet. </h3>
+    }
 
-@foreach (Course course in Model)
-{
-  <li>@Html.ActionLink($"{course.CourseName}", "Details", new { id = course.CourseId})</li>
-}
-
-<p>@Html.ActionLink("Add new course", "Create")</p>
+    @foreach (Course course in Model)
+    {
+      <div class="col">@Html.ActionLink($"{course.CourseName}", "Details", new { id = course.CourseId })</div>
+    }
+  </div>
+</div>
+<br />
+<button type="button" class="btn btn-outline-dark btn-lg">@Html.ActionLink("Add new course", "Create")</button>
