--- a/UniversityRegistrar/wwwroot/css/styles.css
+++ b/UniversityRegistrar/wwwroot/css/styles.css
@@ -4,15 +4,32 @@ div#footer {
 	left:0px;
 	width:100%;
 	color:#CCC;
-	background:#333;
+	background:#50858B;
 	padding:8px;
 }
+
+div#header {
+  background: #50858B;
+  padding: 8px;
+  margin: 10px;
+}
+
+a {
+  text-decoration: none;
+  color: black;
+}
+
+a:hover {
+  color: #f8f9fa;
+  text-decoration: underline;
+}
+
 
 .card {
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
   border-radius: 20px;
-  background-color: rgb(162, 223, 189);
+  background-color: #8fb4b7;
   text-align: center;
 	padding-bottom: 20px;
 	padding: 2px 16px;
@@ -30,6 +47,11 @@ div#footer {
 
 ul {
   list-style-type: none;
+  padding: 0;
+}
+
+li {
+  margin-bottom: 5px;
 }
 
 img {
@@ -38,4 +60,26 @@ img {
   margin-left: auto;
   margin-right: auto;
   
+}
+
+body {
+  font-family: "Gill Sans", sans-serif;
+  font-size: x-large;
+  margin: 0;
+  padding: 0;
+  background-color: #f8f9fa;
+  text-align: center;
+}
+
+h1 {
+  text-align: center;
+}
+
+hr {
+  border-color: black;
+  margin: 20px 0;
+}
+
+col {
+  padding: 15px;
 }
